feat: race-safe correlation, manual recovery, variable pattern (#42)
* feat(epistola): race-safe correlation, manual recovery, and variable pattern

Address the silent-loss case where Epistola delivers a generation result, the
collector acks it, but no BPMN execution receives the message — leaving the
catch event waiting forever. Three changes:

- BPMN race-safety validator. Walks every deployed process definition with a
  generate-document action, traverses the forward graph (gateways included)
  to find an EpistolaDocumentGenerated catch event, and warns on
  PLATFORM_ASYNC_AFTER_ON_SERVICE_TASK (Valtimo's deploy-time
  ${null}+asyncAfter signature) or ASYNC_BEFORE_ON_CATCH_EVENT. Surfaced via
  GET /admin/validations and a dedicated tab in the admin UI. Never modifies
  BPMN — operators remediate by adding a camunda:expression in their
  authoring tool.

- Manual reconcile endpoint + button. POST /admin/pending/{executionId}/
  reconcile reads the stuck execution's epistolaJobPath, fetches the current
  job status from Epistola, and re-runs message correlation if terminal
  (200) or returns 409 if still pending. PBAC-gated by
  EpistolaAdministration:MANAGE. Pending Jobs tab in the admin UI gets a
  Reconcile action per row.

- Variable pattern alongside the catch-event pattern. resultProcessVariable
  now stores a Map<String,Object> ({requestId, status, documentId,
  errorMessage}) instead of a plain string. The collector updates it
  in-place when results land via runtimeService.setVariable, so processes
  without a catch event can read ${var.status} / ${var.documentId} later.
  Catch-event pattern is unchanged. check-job-status accepts both shapes
  (String legacy, Map current) for backward compatibility.

Also: WARN log on 0-match correlations (was silent), full bilingual
translations, async.md rewrite documenting both patterns, full test
coverage including gateway traversal and wait-state break.

BREAKING: resultProcessVariable shape change is documented in 