@@ -2,21 +2,35 @@ package app.epistola.valtimo.service.completion;
 import app.epistola.valtimo.service.completion.EpistolaMessageCorrelationService;
 
 import app.epistola.valtimo.domain.EpistolaProcessVariables;
+import ch.qos.logback.classic.Level;
+import ch.qos.logback.classic.Logger;
+import ch.qos.logback.classic.spi.ILoggingEvent;
+import ch.qos.logback.core.read.ListAppender;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentCaptor;
 import org.operaton.bpm.engine.MismatchingMessageCorrelationException;
 import org.operaton.bpm.engine.RuntimeService;
 import org.operaton.bpm.engine.runtime.MessageCorrelationBuilder;
 import org.operaton.bpm.engine.runtime.MessageCorrelationResult;
+import org.operaton.bpm.engine.runtime.ProcessInstance;
+import org.operaton.bpm.engine.runtime.ProcessInstanceQuery;
+import org.slf4j.LoggerFactory;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -25,6 +39,8 @@ class EpistolaMessageCorrelationServiceTest {
     private RuntimeService runtimeService;
     private MessageCorrelationBuilder correlationBuilder;
     private EpistolaMessageCorrelationService service;
+    private ListAppender<ILoggingEvent> logAppender;
+    private Logger correlationLogger;
 
     @BeforeEach
     void setUp() {
@@ -34,10 +50,42 @@ class EpistolaMessageCorrelationServiceTest {
 
         when(runtimeService.createMessageCorrelation(EpistolaProcessVariables.MESSAGE_NAME))
                 .thenReturn(correlationBuilder);
-        when(correlationBuilder.processInstanceVariableEquals(any(), any()))
+        lenient().when(correlationBuilder.processInstanceVariableEquals(any(), any()))
                 .thenReturn(correlationBuilder);
-        when(correlationBuilder.setVariable(any(), any()))
+        lenient().when(correlationBuilder.setVariable(any(), any()))
                 .thenReturn(correlationBuilder);
+
+        // Default: no process instance matches the jobPath query (variable-pattern path is no-op).
+        // Individual tests can override.
+        ProcessInstanceQuery emptyQuery = mock(ProcessInstanceQuery.class);
+        lenient().when(runtimeService.createProcessInstanceQuery()).thenReturn(emptyQuery);
+        lenient().when(emptyQuery.variableValueEquals(anyString(), any())).thenReturn(emptyQuery);
+        lenient().when(emptyQuery.list()).thenReturn(Collections.emptyList());
+
+        correlationLogger = (Logger) LoggerFactory.getLogger(EpistolaMessageCorrelationService.class);
+        logAppender = new ListAppender<>();
+        logAppender.start();
+        correlationLogger.addAppender(logAppender);
+    }
+
+    private void mockMatchingProcessInstance(String pid, String resultVariableName) {
+        ProcessInstance pi = mock(ProcessInstance.class);
+        lenient().when(pi.getId()).thenReturn(pid);
+
+        ProcessInstanceQuery query = mock(ProcessInstanceQuery.class);
+        when(runtimeService.createProcessInstanceQuery()).thenReturn(query);
+        when(query.variableValueEquals(eq("epistolaJobPath"), any())).thenReturn(query);
+        when(query.list()).thenReturn(List.of(pi));
+        if (resultVariableName != null) {
+            when(runtimeService.getVariable(pid, "epistolaResultVariableName")).thenReturn(resultVariableName);
+        } else {
+            when(runtimeService.getVariable(pid, "epistolaResultVariableName")).thenReturn(null);
+        }
+    }
+
+    @AfterEach
+    void tearDown() {
+        correlationLogger.detachAppender(logAppender);
     }
 
     @Test
@@ -50,10 +98,14 @@ class EpistolaMessageCorrelationServiceTest {
         assertThat(count).isEqualTo(1);
         verify(correlationBuilder).processInstanceVariableEquals(
                 "epistolaJobPath", "epistola:job:tenant-a/req-123");
-        verify(correlationBuilder).setVariable("epistolaStatus", "COMPLETED");
-        verify(correlationBuilder).setVariable("epistolaDocumentId", "doc-456");
-        verify(correlationBuilder).setVariable("epistolaErrorMessage", null);
         verify(correlationBuilder).correlateAllWithResult();
+        // Note: result data (status / documentId / errorMessage) is no longer set as
+        // per-execution scalars on the correlation builder. updateResultVariable
+        // populates the rich object on the process-instance scope; that's the single
+        // source of truth.
+        verify(correlationBuilder, never()).setVariable(eq("epistolaStatus"), any());
+        verify(correlationBuilder, never()).setVariable(eq("epistolaDocumentId"), any());
+        verify(correlationBuilder, never()).setVariable(eq("epistolaErrorMessage"), any());
     }
 
     @Test
@@ -67,6 +119,23 @@ class EpistolaMessageCorrelationServiceTest {
     }
 
     @Test
+    void correlateCompletion_shouldLogWarnWhenZeroInstancesMatch() {
+        when(correlationBuilder.correlateAllWithResult())
+                .thenReturn(Collections.emptyList());
+
+        service.correlateCompletion("tenant-a", "req-999", "FAILED", null, "validation error");
+
+        assertThat(logAppender.list)
+                .anySatisfy(event -> {
+                    assertThat(event.getLevel()).isEqualTo(Level.WARN);
+                    String formatted = event.getFormattedMessage();
+                    assertThat(formatted).contains("Correlated 0 instances");
+                    assertThat(formatted).contains("epistola:job:tenant-a/req-999");
+                    assertThat(formatted).contains("FAILED");
+                });
+    }
+
+    @Test
     void correlateCompletion_shouldReturnZeroOnMismatchingCorrelationException() {
         when(correlationBuilder.correlateAllWithResult())
                 .thenThrow(new MismatchingMessageCorrelationException("no match"));
@@ -74,6 +143,76 @@ class EpistolaMessageCorrelationServiceTest {
         int count = service.correlateCompletion("tenant-a", "req-000", "COMPLETED", "doc-1", null);
 
         assertThat(count).isZero();
+    }
+
+    @Test
+    void correlateCompletion_writesRichObjectToConfiguredVariable() {
+        when(correlationBuilder.correlateAllWithResult())
+                .thenReturn(Collections.emptyList());
+        mockMatchingProcessInstance("pi-1", "epistolaRequestId");
+
+        service.correlateCompletion("tenant-a", "req-rich", "COMPLETED", "doc-rich", null);
+
+        ArgumentCaptor<Object> valueCaptor = ArgumentCaptor.forClass(Object.class);
+        verify(runtimeService).setVariable(eq("pi-1"), eq("epistolaRequestId"), valueCaptor.capture());
+        Object value = valueCaptor.getValue();
+        assertThat(value).isInstanceOf(Map.class);
+        @SuppressWarnings("unchecked")
+        Map<String, Object> map = (Map<String, Object>) value;
+        assertThat(map).containsEntry("requestId", "req-rich");
+        assertThat(map).containsEntry("status", "COMPLETED");
+        assertThat(map).containsEntry("documentId", "doc-rich");
+        assertThat(map).containsEntry("errorMessage", null);
+    }
+
+    @Test
+    void correlateCompletion_writesRichObjectUnderWhateverNameUserConfigured() {
+        when(correlationBuilder.correlateAllWithResult())
+                .thenReturn(Collections.emptyList());
+        mockMatchingProcessInstance("pi-1", "myCustomVarName");
+
+        service.correlateCompletion("tenant-a", "req-rich", "FAILED", null, "boom");
+
+        verify(runtimeService).setVariable(eq("pi-1"), eq("myCustomVarName"), any());
+    }
+
+    @Test
+    void correlateCompletion_skipsRichObjectWhenCompanionVariableMissing() {
+        when(correlationBuilder.correlateAllWithResult())
+                .thenReturn(Collections.emptyList());
+        mockMatchingProcessInstance("pi-1", null);
+
+        service.correlateCompletion("tenant-a", "req-rich", "COMPLETED", "doc-1", null);
+
+        verify(runtimeService, never()).setVariable(eq("pi-1"), anyString(), any());
+    }
+
+    @Test
+    void correlateCompletion_skipsRichObjectWhenNoProcessInstanceMatches() {
+        // Default setup: empty query result. The variable-pattern path is a no-op.
+        when(correlationBuilder.correlateAllWithResult())
+                .thenReturn(Collections.emptyList());
+
+        service.correlateCompletion("tenant-a", "req-orphan", "COMPLETED", "doc-1", null);
+
+        verify(runtimeService, never()).setVariable(anyString(), anyString(), any());
+    }
+
+    @Test
+    void correlateCompletion_shouldLogWarnOnMismatchingCorrelationException() {
+        when(correlationBuilder.correlateAllWithResult())
+                .thenThrow(new MismatchingMessageCorrelationException("no match"));
+
+        service.correlateCompletion("tenant-a", "req-000", "COMPLETED", "doc-1", null);
+
+        assertThat(logAppender.list)
+                .anySatisfy(event -> {
+                    assertThat(event.getLevel()).isEqualTo(Level.WARN);
+                    String formatted = event.getFormattedMessage();
+                    assertThat(formatted).contains("Correlated 0 instances");
+                    assertThat(formatted).contains("MismatchingMessageCorrelationException");
+                    assertThat(formatted).contains("epistola:job:tenant-a/req-000");
+                });
     }
 
     @Test
@@ -91,15 +230,20 @@ class EpistolaMessageCorrelationServiceTest {
     }
 
     @Test
-    void correlateCompletion_shouldPassErrorMessageForFailedJobs() {
+    void correlateCompletion_shouldUpdateRichObjectForFailedJobs() {
         when(correlationBuilder.correlateAllWithResult())
-                .thenReturn(List.of(mock(MessageCorrelationResult.class)));
+                .thenReturn(Collections.emptyList());
+        mockMatchingProcessInstance("pi-fail", "epistolaResult");
 
         service.correlateCompletion("tenant-a", "req-fail", "FAILED", null, "Template rendering error");
 
-        verify(correlationBuilder).setVariable("epistolaStatus", "FAILED");
-        verify(correlationBuilder).setVariable("epistolaDocumentId", null);
-        verify(correlationBuilder).setVariable("epistolaErrorMessage", "Template rendering error");
+        ArgumentCaptor<Object> valueCaptor = ArgumentCaptor.forClass(Object.class);
+        verify(runtimeService).setVariable(eq("pi-fail"), eq("epistolaResult"), valueCaptor.capture());
+        @SuppressWarnings("unchecked")
+        Map<String, Object> map = (Map<String, Object>) valueCaptor.getValue();
+        assertThat(map).containsEntry("status", "FAILED");
+        assertThat(map).containsEntry("documentId", null);
+        assertThat(map).containsEntry("errorMessage", "Template rendering error");
     }
 
     @Nested
